--- a/style.css
+++ b/style.css
@@ -64,6 +64,12 @@ ul ul a {
   background: #1C1063;
 }
 
+ul ul button {
+  font-size: 0.9em !important;
+  padding-left: 60px !important;
+  background: #1C1063;
+}
+
 #sidebar.active {
   min-width: 100px;
   max-width: 80px;
@@ -172,9 +178,7 @@ ul ul a {
 }
 
 #sidebarCollapse.active span {
-  /* no rotation */
   transform: none;
-  /* all bars are visible */
   opacity: 1;
   margin: 5px auto;
 }
@@ -214,14 +218,68 @@ p {
   font-size: 10px;
 }
 
+.card-header {
+  color: gray;
+  text-transform: uppercase;
+  font-family: "Lucida Console", Monaco, monospace;
+}
+.card {
+  line-height: 80%;
+}
+.image {
+  line-height: 80%;
+}
+#col-md-6 {
+  line-height: 80%;
+}
+button.btn-primary {
+  background-color: #1C1063;
+  border-color: #1C1063;
+  padding: 40px 20px;
+  font-size: 1.1em;
+  display: block;
+}
+
+button.btn-primary:hover {
+  background-color: white;
+  color: #1C1063;
+}
+
 .card-headers {
   background-color: navy;
   color: white;
   text-transform: uppercase;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .card-headers:hover {
   background-color: orange;
   text-decoration: none;
   transition: all 0.3s;
+}
+
+.mb-0.mt-3.red-text {
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-style: italic;
+  text-transform: uppercase;
+}
+
+a.collapsed {
+  background-color: navy;
+}
+
+a.collapsed:hover {
+  background-color: orange;
+}
+.modal-header {
+  color: black;
+}
+.modal-content {
+  color: black;
+}
+.col-md-8.px-3{
+font-family: 'Courier New', Courier, monospace;
+font-size: 12px;
+
 }
